kubernetes/base/004_minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio  
  name: minio
  namespace: default 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        command:
        - /bin/bash
        - -c
        args: 
        - minio server /data --console-address :9001
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: minio-storage 
      volumes:
      - name: minio-storage
        persistentVolumeClaim:
          claimName: minio-pvc
