kubernetes/base/007_smm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supporting-material-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supporting-material-manager
  template:
    metadata:
      labels:
        app: supporting-material-manager
    spec:
      containers:
        - name: supporting-material-manager
          image: gravitate-registry.cr.de-fra.ionos.com/supporting-material-manager:latest 
          ports:
            - containerPort: 3000
          resources: {}
          #  limits:
          #    cpu: "1"
          #    memory: "512Mi"
          #  requests:
          #    cpu: "0.5"
          #    memory: "256Mi"
