kubernetes/base/005_smm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smm-service
spec:
  selector:
    app: smm
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
