kubernetes/base/002_minio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - gh-gateway
  http:
    - match:
        - uri:
            prefix: /bucket/
      #rewrite:
      #  uri: "/"
      route:
        - destination:
            host: minio-service.default.svc.cluster.local
            port:
              number: 9001
