kubernetes/base/008_smm-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: supporting-material-manager
spec:
  hosts:
    - "*"
  gateways:
    - gh-gateway
  http:
    - match:
        - uri:
            prefix: /smm/
      #rewrite:
      #  uri: "/"
      route:
        - destination:
            host: supporting-material-manager.default.svc.cluster.local
            port:
              number: 3000
